fixed text-align

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     color: #fdfdfd;
     font-family: "Inter";
     padding: 16px;
+    text-align: center;
 }
 
 /* <hr> styles */
